# luaward

./: .gitignore  LICENSE  Makefile  README.md  luaward.c  pyproject.toml  setup.py
doc/: api.md  architecture.md  index.md  security.md
examples/: basic_usage.py  callbacks.py  cpu_limit.py  sandboxing.py  secure_execution.py
luaward/: __init__.py  isolated.py
tests/: test_basic.py  test_instruction_limit.py  test_sandbox.py  test_security.py
